--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 pymongo==4.6.0
-pydantic==2.5.0
-pandas==2.1.3
+pydantic>=2.5.0
+pandas>=2.0.0
 python-dotenv==1.0.0
 scikit-learn>=1.3.0
 xgboost>=2.0.0
 joblib>=1.3.0
 matplotlib>=3.7.0
 numpy>=1.24.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt>=4.0.1
+python-multipart==0.0.6
